# 3d-raytracer

./: .gitignore  3dRayTracing.sln  CMakeLists.txt  README.md  TODO  compile_commands.json
.cache/clangd/index/: Level.cpp.81E129F5C8DB0D16.idx  Level.hpp.C840C82B87E7B59A.idx  Light.cpp.8A557A14EEE13387.idx  Light.hpp.A73D0EBB8CE9CA75.idx  Object.cpp.CD242A9419FD7536.idx  Object.hpp.B230FE35631E2BEC.idx  Plane.cpp.03D01CF16D23DFB9.idx  Plane.hpp.3B6FCBC3C27513A8.idx  Ray.hpp.97E98F7C0DA07B66.idx  Sphere.cpp.CD168C92D3B76E79.idx  Sphere.hpp.4D191395E4B878D4.idx  main.cpp.325716B54F396283.idx
3dRayTracing/: 3dRayTracing.vcxproj  3dRayTracing.vcxproj.filters
3dRayTracing/Debug/: 3dRayTracing.exe.recipe
3dRayTracing/Src/: Main.cpp
src/: Level.cpp  Level.hpp  Ray.hpp  main.cpp
src/objects/: Light.cpp  Light.hpp  Object.cpp  Object.hpp  Plane.cpp  Plane.hpp  Sphere.cpp  Sphere.hpp
